# temm1e

./: CLAUDE.md  Cargo.toml  README.md  install.sh  skyclaw.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml
crates/skyclaw-automation/: Cargo.toml
crates/skyclaw-automation/src/: heartbeat.rs  lib.rs
crates/skyclaw-tools/src/: custom_tools.rs  lib.rs
crates/temm1e-agent/src/: budget.rs  context.rs  lambda_memory.rs  llm_classifier.rs  runtime.rs
crates/temm1e-cambium/tests/: deploy_integration_test.rs
crates/temm1e-codex-oauth/src/: responses_provider.rs
crates/temm1e-distill/src/: config.rs  lib.rs
crates/temm1e-distill/tests/: bench_eigentune.rs  proof_of_pipeline.rs
crates/temm1e-filestore/src/: local.rs
crates/temm1e-hive/src/: lib.rs
crates/temm1e-memory/src/: sqlite.rs
crates/temm1e-perpetuum/: Cargo.toml
crates/temm1e-perpetuum/src/: chronos.rs  cognitive.rs  conscience.rs  lib.rs  parking.rs  self_work.rs  tracing_ext.rs  types.rs  volition.rs
crates/temm1e-perpetuum/tests/: real_llm_grow_skills_test.rs  self_grow_skills_test.rs
crates/temm1e-providers/src/: anthropic.rs
crates/temm1e-tui/: Cargo.toml
crates/temm1e-tui/src/: lib.rs  (+1 more)
docs/: RELEASE_PROTOCOL.md
src/: main.rs
tems_lab/: ARTIFACT_VALUE_FUNCTION.md  README.md
tems_lab/consciousness/: EXPERIMENT_REPORT.md  RESEARCH_PAPER.md
tems_lab/debug/: ZERO_RISK_MITIGATIONS.md
tems_lab/perpetuum/: IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_PLAN.md  RESEARCH_PAPER.md  VISION.md
tems_lab/swarm/: AB_REPORT_JIT.md
tems_lab/witness/: EXPERIMENT_REPORT.md
(+16 files in other folders)
