[package]
name = "skyclaw-automation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Automation and scheduling for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
